fix relative paths

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: 'Diehard Tinsel Crew: Jingle With a Vengeance'
-url: 'http://www.diehardtinselcrew.com'
+name: 'Diehard Pollen Crew'
+url: 'http://trishtrishtrish.github.io/diehardpollencrew/'
 
 collections:
   - weekends
